# GPUAbstractionLayer

./: CMakeLists.txt  GPUAbstractionLayer.sln  GPUAbstractionLayer.vcxproj  GPUAbstractionLayer.vcxproj.filters  LICENSE  README.md
include/: ArgumentTools.h  CudaTools.cuh  Cuda_.h  DevMem.h  GPUAbstractionLayer_global.h  GPUWrapper.h  Kernel.h  Log.h  OpenCL.h  OpenCLTools.h
src/: ArgumentTools.cpp  Cuda.cpp  CudaTools.cu  DevMem.cpp  GPUWrapper.cpp  Kernel.cpp  Log.cpp  OpenCL.cpp  OpenCLTools.cpp
